<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewLabelTitle"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:text="@string/Label_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewLabelOriginalTitle"
        style="@style/LabelStyle"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:text="@string/Label_oringinal_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinecCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelinecCenter"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        style="@style/BorderStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />


    <TextView
        android:id="@+id/textViewOriginalTitile"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelinecCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <View
        style="@style/BorderStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewOriginalTitile" />

    <TextView
        android:id="@+id/textViewLabelRating"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:text="@string/textView_Rated"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitile" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelinecCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitile" />

    <View
        style="@style/BorderStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRating" />

    <TextView
        android:id="@+id/textViewLabelReleaseDate"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:text="@string/label_releaze_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

    <TextView
        android:id="@+id/textViewReleaseDate"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelinecCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

    <View
        style="@style/BorderStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewReleaseDate" />

    <TextView
        android:id="@+id/textViewLabelDescription"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:text="@string/textView_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDate" />

    <TextView
        android:id="@+id/textViewOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription" />

    <View
        style="@style/BorderStyle"
        app:layout_constraintBottom_toTopOf="@id/textViewLabelTrailers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewOverview" />

    <TextView
        android:id="@+id/textViewLabelTrailers"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:text="@string/textview_label_trailer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOverview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTrailers"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelTrailers" />

    <View
        style="@style/BorderStyle"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTrailers"
        app:layout_constraintBottom_toTopOf="@id/textViewLabelReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLabelReview"
        style="@style/LabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginRight="@dimen/size_8dp"
        android:text="@string/textview_label_reviews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTrailers" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReviews"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelReview" />

</androidx.constraintlayout.widget.ConstraintLayout>